--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paginaprueba</title>
+    <title>Pagina Iconic</title>
 </head>
 <body>
-   <header>
-   <h1>mi pagina iconic</h1>
-   </header> 
+    <header>
+        <h1>hola pagina</h1>
+    </header>
 </body>
 </html>
